--- a/public/lab_4/style.css
+++ b/public/lab_4/style.css
@@ -60,7 +60,7 @@ html, body {
   }
   
   body > * {
-    background-color: purple;
+    background-color: rgb(170, 4, 170);
     padding: 1%;
   }
   
@@ -146,4 +146,15 @@ html, body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+}
+
+.flex-outer > li > label,
+.flex-outer li p {
+  flex: 1 0 120px;
+  max-width: 220px;
+}
+ 
+.flex-outer > li > label + *,
+.flex-inner {
+  flex: 1 0 220px;
 }
