--- a/public/lab_5/style.css
+++ b/public/lab_5/style.css
@@ -161,6 +161,7 @@ html, body {
 
 .flex-outer li button {
   margin-left: auto;
+  margin-right: 10px;
   padding: 8px 16px;
   border: none;
   background: #333;
@@ -171,7 +172,7 @@ html, body {
 }
 
 .flex-inner li {
-  width: 80px;
+  width: 95px;
 }
 
 .flex-inner {
