--- a/public/lab_5/style.css
+++ b/public/lab_5/style.css
@@ -160,6 +160,7 @@ html, body {
 }
 
 .flex-outer li button {
+  flex-flow: row wrap;
   margin-left: auto;
   margin-right: 10px;
   padding: 8px 16px;
@@ -180,5 +181,5 @@ html, body {
 }
 
 p.checkbox-list-label {
-  
+
 }
