--- a/public/lab_5/style.css
+++ b/public/lab_5/style.css
@@ -161,6 +161,7 @@ html, body {
 
 .flex-outer li button {
   flex-flow: row wrap;
+  justify-content: flex-start;
   margin-left: auto;
   margin-right: 10px;
   padding: 8px 16px;
