--- a/public/lab_7/styles.css
+++ b/public/lab_7/styles.css
@@ -46,7 +46,7 @@ body {
 }
 
 .flex-outer button {
-  background-color: darkolivegreen;
+  background-color: slateblue;
   color: white;
   padding: 6px 12px;
   border: none;
